@@ -2870,7 +2870,6 @@ qc pass: socks4 server
 qc pass: socks5 server
 qc pass: tacacs server
 qc pass: udp forwarder server
-todo: multiple listen stanzas for bgp listen
 todo: backplane header in the dataplanes with bridge_id, vrf_id and nexthop_id
 todo: sho run server
 todo: allow command to be a substring of an other
