@@ -12,7 +12,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.5.8-cur, done by cs@nop.<br/>
-tested: 2022-05-08 07:48:16, took 00:08:31, with 80 workers, on 2872 cases, 0 failed, 0 traces, 4 retries<br/>
+tested: 2022-05-08 08:58:15, took 00:08:59, with 80 workers, on 2872 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
